# cpd-CuPixDRC

./: LICENSE.txt  README.md
CMakeTests/: FindAnyQt.cmake
cli/: CMakeLists.txt  Main.cpp
docs/: memory_budget.txt  memory_speed.txt
gui/: CMakeLists.txt  DRCwind.cpp  DRCwind.h  DRCwind.ui  ImageRequester.cpp  ImageRequester.h  Main.cpp
gui/widgets/: ErrorList.cpp  ErrorList.ui
kernel/: design_rules.h  init.cpp  init.cu  init.h  kernel.cpp  kernel.cu  kernel.h  kernel_defs.h  kernel_old.cu
src/: CMakeLists.txt  DRCwind.cpp  DRCwind.h  DRCwind.ui  ImageRequester.cpp  Main.cpp  PixelData.h
src/dialogs/: SelectDevice.cpp  SelectDevice.h  SelectDevice.ui
src/kernel/: design_rules.h  errors.h  init.cu  init.h  kernel.cu  kernel.h  kernel_defs.h  main.cu  tracer.cu  tracer.h
src/widgets/: ErrorList.cpp  ErrorList.h  ErrorList.ui
